Apr 07 2003  2.9.1  Fixed README numberings
                    Un-broke majorly broken display grouping code.
                    Moved conf files to configure-generated to pick up prefixes
Apr 06 2003  2.9.1  Merged panelfront_display patch from Faust:
                     Tweaks to elapsed time display
                     Changed status panel scrolling
                     Changed text dump panel scrolling
                     Added percent-scrolled to scrolling panels
Apr 04 2003  2.9.1  Fixed silly error in drone tcpstreamer
Apr 03 2003  2.9.1  Revamped core timer logic to be MUCH more efficient,
                     especially with large numbers of timers.
                    Changed prism2_hostap monitor script AGAIN.
                    Fixed transmission of new clients to the panel ui
Apr 02 2003  2.9.1  Removed configure switch for acpi - now dynamically 
                     detected when the panelfront starts.
Apr 01 2003  2.9.1  Fixed airjack ssid alert to check for the right thing
Mar 30 2003  2.9.1  Updated configure to look for magick better, various other
                     configure tweaks.
                    Added alert for beacons for ssid 'airjack'
                    Restructured some of packetrackers alert handling to make
                     future code easier
                    Added ability to scroll panels ui columns left and right
                    Fixed some new networks not being transmitted to the client
Mar 28 2003  2.9.1  Updated configure to look for ethereal 0.9.10
                    Updated configure to work with autoconfig 2.57... stupid
                     autoconf 2.57 broke things that shouldn't have been broke.
                    Modified cisco_cvs capture type to be ethX:wifiX
Mar 25 2003  2.9.1  More streamlining of internal GPS process, proper 
                     preservation of packet timestamp.
                    Expanded max packet size and added protection for